# juniper-schema

./: Cargo.toml  LICENSE
crates/juniper-schema-codegen-lib/: Cargo.toml
crates/juniper-schema-codegen-lib/src/: codegen.rs  codegen_from_file.rs  lib.rs  schema_data.rs  schema_info.rs
crates/juniper-schema-codegen-macros/: Cargo.toml
crates/juniper-schema-codegen-macros/src/: lib.rs  schema_parser.rs
crates/juniper-schema-codegen-playground/: Cargo.toml
crates/juniper-schema-codegen-playground/src/graphql/: mod.rs  user.rs
crates/juniper-schema-lib/: Cargo.toml
crates/juniper-schema-lib/src/: codegen.rs  codegen2.rs  codegen3.rs  lib.rs  schema_info.rs
crates/juniper-schema-playground/: Cargo.toml  schema.graphqls
crates/juniper-schema-playground/src/graphql/: mod.rs  query.rs  user.rs
src/: lib.rs
